Editado e modificado com sucesso

--- a/index.html
+++ b/index.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-PT">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="My Card - Um layout de cartão simples usando HTML e CSS">
-    <meta name="keywords" content="HTML, CSS, Card Layout, Web Design">
-    <meta name="author" content="Francisco Afonso">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="/favicon/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
-    <title> Cartão de Apresentação | Francisco Afonso</title>
+    <title>Cartão | afonso.</title>
 </head>
 
 <body>
+    <div class="card">
+        <img src="image/foto de perfil.png" alt="Foto de Perfil" class="card-image">
+        <h1 class="card-title">Francisco Afonso</h1>
+        <p class="card-paragraph">
+            Focado na criação de interfaces eficientes e responsivas, aplicando as melhores práticas de desenvolvimento
+            para proporcionar experiências intuitivas e de alto desempenho.
+        </p>
 
-    <div class="container">
-        <div class="card">
-            <div class="card-content">
-                <div class="card-iamge">
-                    <img src="image/foto de perfil.png" alt="Foto de Perfil">
-                </div>
+        <div class="card-tags">
+            <span class="tag" id="html"><i class='bx bxl-html5'></i> HTML 5</span>
+            <span class="tag" id="css"><i class='bx bxl-css3'></i> CSS 3</span>
+            <span class="tag" id="javascript"><i class='bx bxl-javascript'></i> JAVASCRIPT</span>
+            <span class="tag" id="react"><i class='bx bxl-react'></i> REACT</span>
+            <span class="tag" id="bootstrap"><i class='bx bxl-bootstrap'></i> BOOTSTRAP 5
+            </span>
+            <span class="tag" id="php"><i class='bx bxl-php'></i> PHP </span>
+            <span class="tag" id="mysql"><i class='bx bx-data'></i> MYSQL</span>
+        </div>
 
-                <p class="card-description">Desenvolvedo Front-End</p>
-                <h1 class="card-title">Francisco Afonso</h1>
-
-                <p class="card-paragraph">
-                    Olá, sou um desenvolvedor Front-End apaixonado por criar experiências digitais incríveis. 
-                    Estou sempre em busca de novos desafios e oportunidades para aprender e crescer na área de desenvolvimento web.
-                </p>
-            </div>
-
-            <div class="card-buttons">
-                <a href="https://www.linkedin.com/in/francisco-ngonde-afonso-1b903b204/" class="btn" target="_blank" id="LinkedIn"><i class="fa-brands fa-linkedin-in"></i> LinkedIn </a>
-                <a href="https://github.com/afonsowebdev" class="btn" target="_blank" id="GitHub"><i class="fa-brands fa-github" ></i> Github </a>
-                <a href="https://www.instagram.com/afonso.web.developer?igsh=MWR6bncwb2Nudnhpbw%3D%3D&utm_source=qr" class="btn" target="_blank" id="Instagram"> <i class="fa-brands fa-instagram"></i> Instagram </a>
-                <a href="https://s3.eu-north-1.amazonaws.com/franciscoafonso.pt/FrancisWeb+Portif%C3%B3lio+Pessoal/index.html" class="btn" target="_blank" id="Portifolio"><i class="fa-solid fa-globe"></i> Portifólio </a>
-            </div>
+        <div class="card-btn">
+            <a href="pdf/curriculo-francisco.pdf" class="btn" id="curriculo" download=""> <i class='bx bx-download'></i> Curriculo</a>
+            <a href="https://afonsowebdev.github.io/portifolio-afonsoWebDev/" target="_blank" class="btn" id="portifolio"> <i class='bx bxl-internet-explorer'></i> Portifólio</a>
+            <a href="https://github.com/afonsowebdev" target="_blank" class="btn" id="github"> <i class='bx bxl-github'></i> Github</a>
+            <a href="https://www.linkedin.com/in/francisco-ngonde-afonso/" target="_blank" class="btn" id="linkedin"> <i class='bx bxl-linkedin'></i> LinkedIn</a>
+            <a href="https://www.instagram.com/afonso.developer/" target="_blank" class="btn" id="instagram"> <i class='bx bxl-instagram'></i> Instagram</a>
         </div>
     </div>
-
-
-
 </body>
 
 </html>
