Alterado com sucesso

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="card-btn">
             <a href="pdf/curriculo-francisco.pdf" class="btn" id="curriculo" download=""> <i class='bx bx-download'></i> Curriculo</a>
-            <a href="https://afonsowebdev.github.io/portifolio-afonsoWebDev/" target="_blank" class="btn" id="portifolio"> <i class='bx bxl-internet-explorer'></i> Portifólio</a>
+            <a href="https://afonsowebdev.github.io/portifolio-afonso/" target="_blank" class="btn" id="portifolio"> <i class='bx bxl-internet-explorer'></i> Portifólio</a>
             <a href="https://github.com/afonsowebdev" target="_blank" class="btn" id="github"> <i class='bx bxl-github'></i> Github</a>
             <a href="https://www.linkedin.com/in/francisco-ngonde-afonso/" target="_blank" class="btn" id="linkedin"> <i class='bx bxl-linkedin'></i> LinkedIn</a>
             <a href="https://www.instagram.com/afonso.developer/" target="_blank" class="btn" id="instagram"> <i class='bx bxl-instagram'></i> Instagram</a>
